--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# Directories
+obj
+bin
+
+# Visual Studio
+*.vcxproj*
+
 # Prerequisites
 *.d
 
@@ -30,3 +37,5 @@
 *.exe
 *.out
 *.app
+/.vs/Ona/v16
+/Ona.sln
