--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@ obj
 bin
 
 # Visual Studio
+/.vs/*
+*.sln
 *.vcxproj*
 
 # Prerequisites
@@ -37,5 +39,3 @@ bin
 *.exe
 *.out
 *.app
-/.vs/Ona/v16
-/Ona.sln
